--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,41 @@
-*~
 *.old
+# C++ objects and libs
+*.slo
+*.lo
+*.o
+*.a
+*.la
+*.lai
+*.so
+*.so.[0-9]*
+*.dll
+*.dylib
+# Qt-es
+/.qmake.cache
+/.qmake.stash
+*.pro.user
+*.pro.user.*
+*.qbs.user
+*.qbs.user.*
+*.moc
+moc_*.cpp
+qrc_*.cpp
+ui_*.h
+*-build-*
+# QtCreator
+*.autosave
+#QtCtreator Qml
+*.qmlproject.user
+*.qmlproject.user.*
+
+.directory
+[Dd]ebug/
+[Rr]elease/
+[Mm]akefile*
+*.o
+*.a
+*.zip
+*.Debug
+*.Release
+*~
+moc_*.cpp
