--- a/tools/src/plugins/gsl/CMakeLists.txt
+++ b/tools/src/plugins/gsl/CMakeLists.txt
@@ -22,4 +22,4 @@ add_library (${PROJECT_NAME} SHARED ${SRC_LIST})
 target_compile_features(${PROJECT_NAME} PUBLIC cxx_constexpr)
 target_link_libraries(${PROJECT_NAME} Qt5::Core Qt5::Script ${LINK_LIBS})
 
-install(TARGETS ${PROJECT_NAME} LIBRARY DESTINATION bin/plugins)
+install(TARGETS ${PROJECT_NAME} LIBRARY DESTINATION ${SCRIPT_PLUGINS_INSTALL_DIR})
