--- a/storage/src/plugins/json/CMakeLists.txt
+++ b/storage/src/plugins/json/CMakeLists.txt
@@ -14,4 +14,4 @@ add_library (${PROJECT_NAME} SHARED ${SRC_LIST})
 target_compile_features(${PROJECT_NAME} PUBLIC cxx_constexpr)
 target_link_libraries(${PROJECT_NAME} Qt5::Core ${LINK_LIBS})
 
-install(TARGETS ${PROJECT_NAME} LIBRARY DESTINATION bin/plugins)
+install(TARGETS ${PROJECT_NAME} LIBRARY DESTINATION ${STORAGE_PLUGINS_INSTALL_DIR})
