--- a/tools/src/softshell/CMakeLists.txt
+++ b/tools/src/softshell/CMakeLists.txt
@@ -22,4 +22,5 @@ target_compile_features(${PROJECT_NAME} PUBLIC cxx_constexpr)
 target_link_libraries (softshell soft-kernel Qt5::Core Qt5::Script Qt5::Concurrent Qt5::Network)
 
 install (TARGETS ${PROJECT_NAME} RUNTIME DESTINATION bin)
-install (DIRECTORY modules DESTINATION ${SCRIPT_MODULES_INSTALL_DIR})
+install (DIRECTORY modules/soft DESTINATION ${SCRIPT_MODULES_INSTALL_DIR})
+install (DIRECTORY modules/utils DESTINATION ${SCRIPT_MODULES_INSTALL_DIR})
