Use destination path alias

--- a/storage/src/mongo/CMakeLists.txt
+++ b/storage/src/mongo/CMakeLists.txt
@@ -24,6 +24,6 @@ set(${PROJECT_NAME}_INCLUDE_DIRS ${PROJECT_SOURCE_DIR}
     CACHE INTERNAL "${PROJECT_NAME}: Include Directories" FORCE)
 
 install(TARGETS ${PROJECT_NAME} LIBRARY DESTINATION lib)
-install(DIRECTORY . DESTINATION include/soft5 FILES_MATCHING PATTERN "*.h")
-install(FILES QMongo DESTINATION include/soft5)
+install(DIRECTORY . DESTINATION ${INCLUDE_INSTALL_DIR} FILES_MATCHING PATTERN "*.h")
+install(FILES QMongo DESTINATION ${INCLUDE_INSTALL_DIR})
 
