--- a/storage/src/plugins/json/CMakeLists.txt
+++ b/storage/src/plugins/json/CMakeLists.txt
@@ -2,17 +2,15 @@ project (soft-storage-plugins-json C CXX)
 
 set (CMAKE_THREAD_PREFER_PTHREAD TRUE)
 set (CMAKE_AUTOMOC TRUE)
-find_package(Qt5Core REQUIRED)
 
 include_directories (${soft-kernel_INCLUDE_DIRS})
-
-set (LINK_LIBS ${LINK_LIBS})
+set (LINK_LIBS ${LINK_LIBS} ${soft-kernel_LIBS})
 
 aux_source_directory (. SRC_LIST)
 add_definitions(-DQT_PLUGIN)
 add_library (${PROJECT_NAME} SHARED ${SRC_LIST})
 
 target_compile_features(${PROJECT_NAME} PUBLIC cxx_constexpr)
-target_link_libraries(${PROJECT_NAME} Qt5::Core ${LINK_LIBS})
+target_link_libraries(${PROJECT_NAME} ${LINK_LIBS})
 
 install(TARGETS ${PROJECT_NAME} LIBRARY DESTINATION ${STORAGE_PLUGINS_INSTALL_DIR})
