--- a/tools/src/softshell/CMakeLists.txt
+++ b/tools/src/softshell/CMakeLists.txt
@@ -4,22 +4,19 @@ set (CMAKE_AUTOMOC                ON)
 set (CMAKE_INCLUDE_CURRENT_DIR    ON)
 set (CMAKE_THREAD_PREFER_PTHREAD  TRUE)
 
-find_package (Qt5Core        REQUIRED)
-find_package (Qt5Script      REQUIRED)
-find_package (Qt5Concurrent  REQUIRED)
-find_package (Qt5Network     REQUIRED)
-
 qt5_add_resources(QT_RESOURCE softshell.qrc)
 
 include_directories (
   ${soft-kernel_INCLUDE_DIRS}
   ${soft-tools-plugins-common_INCLUDE_DIRS})
 include_directories ("../plugins/common")
+set (LINK_LIBS ${LINK_LIBS} ${HDF5_LIBRARIES} ${soft-kernel_LIBS})
+
 aux_source_directory (. SRC_LIST)
 add_executable(softshell ${SRC_LIST} ${QT_RESOURCE} softshell.qrc)
 
 target_compile_features(${PROJECT_NAME} PUBLIC cxx_constexpr)
-target_link_libraries (softshell soft-kernel Qt5::Core Qt5::Script Qt5::Concurrent Qt5::Network)
+target_link_libraries (${PROJECT_NAME} ${LINK_LIBS})
 
 install (TARGETS ${PROJECT_NAME} RUNTIME DESTINATION bin)
 install (DIRECTORY modules/soft DESTINATION ${SCRIPT_MODULES_INSTALL_DIR})
