--- a/tools/src/hsm/CMakeLists.txt
+++ b/tools/src/hsm/CMakeLists.txt
@@ -4,19 +4,19 @@ set (CMAKE_THREAD_PREFER_PTHREAD  TRUE)
 set (CMAKE_INCLUDE_CURRENT_DIR    ON)
 set (CMAKE_AUTOMOC                ON)
 
-find_package(Qt5Core        REQUIRED)
-find_package(Qt5Script      REQUIRED)
-find_package(Qt5Concurrent  REQUIRED)
-
 include_directories (
   "../plugins/common")
 
 aux_source_directory (. SRC_LIST)
+set (LINK_LIBS ${LINK_LIBS}
+  Qt5::Core
+  Qt5::Script
+  Qt5::Concurrent)
 
 add_definitions(-DQT_PLUGIN)
 add_library (${PROJECT_NAME} SHARED ${SRC_LIST})
 
 target_compile_features(${PROJECT_NAME} PUBLIC cxx_constexpr)
-target_link_libraries(${PROJECT_NAME} Qt5::Core Qt5::Script Qt5::Concurrent ${LINK_LIBS})
+target_link_libraries(${PROJECT_NAME} ${LINK_LIBS})
 
 install(TARGETS ${PROJECT_NAME} LIBRARY DESTINATION lib)
