--- a/tools/src/plugins/gsl/CMakeLists.txt
+++ b/tools/src/plugins/gsl/CMakeLists.txt
@@ -4,22 +4,18 @@ set (CMAKE_THREAD_PREFER_PTHREAD  TRUE)
 set (CMAKE_INCLUDE_CURRENT_DIR    ON)
 set (CMAKE_AUTOMOC                ON)
 
-find_package(Qt5Core REQUIRED)
-find_package(Qt5Script REQUIRED)
-find_package(GSL REQUIRED)
-
 include_directories (
   ${GSL_INCLUDE_DIRS}
   ${soft-kernel_INCLUDE_DIRS}
   "../common")
 
-set (LINK_LIBS ${LINK_LIBS} ${GSL_LIBRARIES})
+set (LINK_LIBS ${LINK_LIBS} ${GSL_LIBRARIES} ${soft-kernel_LIBS})
 aux_source_directory (. SRC_LIST)
 
 add_definitions(-DQT_PLUGIN)
 add_library (${PROJECT_NAME} SHARED ${SRC_LIST})
 
 target_compile_features(${PROJECT_NAME} PUBLIC cxx_constexpr)
-target_link_libraries(${PROJECT_NAME} Qt5::Core Qt5::Script ${LINK_LIBS})
+target_link_libraries(${PROJECT_NAME} ${LINK_LIBS})
 
 install(TARGETS ${PROJECT_NAME} LIBRARY DESTINATION ${SCRIPT_PLUGINS_INSTALL_DIR})
