--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,7 +12,7 @@ option (WITH_PLUGIN_NLOPT "Compile NLOpt plugin"          ON)
 option (WITH_PLUGIN_HD5 "Compile HD5 plugin"              ON)
 option (WITH_PLUGIN_MONGO "Compile HD5 plugin"            ON)
 option (WITH_FOREIGN_C "Compile with C API"               ON)
-option (WITH_FOREIGN_FORTRAN "Compile with Fortran API"   ON)
+option (WITH_FOREIGN_FORTRAN "Compile with Fortran API"   OFF)
 #option (WITH_FOREIGN_PYTHON "Compile with Python API" OFF)
 #option (WITH_FOREIGN_HASKELL "Compile with Haskell API" OFF)
 option (WITH_TESTS "Compile tests"                        ON)
