Removed all old items in LD_LIBRARY_PATH when running core-test-kernel to get better control of the environment

--- a/core/test/kernel/CMakeLists.txt
+++ b/core/test/kernel/CMakeLists.txt
@@ -16,7 +16,7 @@ if(GTEST_FOUND)
 
   if(UNIX)
     set_property(TEST ${PROJECT_NAME}
-      PROPERTY ENVIRONMENT "LD_LIBRARY_PATH=${soft-kernel_BINARY_DIR}:${soft-storage-plugins-json_BINARY_DIR}:${soft-storage-plugins-mongo_BINARY_DIR}:$ENV{LD_LIBRARY_PATH}")
+      PROPERTY ENVIRONMENT "LD_LIBRARY_PATH=${soft-kernel_BINARY_DIR}:${soft-storage-plugins-json_BINARY_DIR}:${soft-storage-plugins-mongo_BINARY_DIR}")
   else(UNIX)
     set_property(TEST ${PROJECT_NAME}
       PROPERTY ENVIRONMENT "PATH=${soft-kernel_BINARY_DIR}:${soft-storage-plugins-json_BINARY_DIR}:${soft-storage-plugins-mongo_BINARY_DIR}:$ENV{PATH}")
