Added option to register custom plugin directory

--- a/core/test/kernel/CMakeLists.txt
+++ b/core/test/kernel/CMakeLists.txt
@@ -12,7 +12,7 @@ if(GTEST_FOUND)
   target_link_libraries(${PROJECT_NAME} ${soft-kernel_LIBS} ${GTEST_LIBRARIES}) 
 
   add_test(${PROJECT_NAME}
-    ${RUNNER} ${CMAKE_CURRENT_BINARY_DIR}/${PROJECT_NAME})
+    ${RUNNER} ${CMAKE_CURRENT_BINARY_DIR}/${PROJECT_NAME} "${soft-storage-plugins-mongo_BINARY_DIR}:${soft-storage-plugins-json_BINARY_DIR}")
 
   if (UNIX)
     set_property(TEST ${PROJECT_NAME}
