--- a/storage/test/mongo/CMakeLists.txt
+++ b/storage/test/mongo/CMakeLists.txt
@@ -8,16 +8,20 @@ if(GTEST_FOUND)
 
   aux_source_directory(. SRC_LIST)
   add_executable(${PROJECT_NAME} ${SRC_LIST})
-  include_directories(
-    ${soft-storage-mongo_INCLUDE_DIRS} 
-     ${GTEST_INCLUDE_DIRS})
-  target_link_libraries(${PROJECT_NAME} 
-    soft-kernel 
-    soft-storage-mongo
-    ${GTEST_BOTH_LIBRARIES}) 
+  include_directories(${soft-storage-mongo_INCLUDE_DIRS} ${GTEST_INCLUDE_DIRS})
+  target_link_libraries(${PROJECT_NAME} ${soft-storage-mongo_LIBS} ${GTEST_LIBRARIES}) 
 
-  add_test(${PROJECT_NAME} ${RUNNER} ${CMAKE_CURRENT_BINARY_DIR}/${PROJECT_NAME})
+  add_test(${PROJECT_NAME}
+    ${RUNNER} ${CMAKE_CURRENT_BINARY_DIR}/${PROJECT_NAME} "${soft-storage-plugins-mongo_BINARY_DIR}")
 
+  if (UNIX)
+    set_property(TEST ${PROJECT_NAME}
+      PROPERTY ENVIRONMENT "LD_LIBRARY_PATH=${soft-kernel_BINARY_DIR}:${soft-storage-mongo_BINARY_DIR}:${soft-storage-plugins-mongo_BINARY_DIR}:$ENV{LD_LIBRARY_PATH}")
+  else()
+    set_property(TEST ${PROJECT_NAME}
+      PROPERTY ENVIRONMENT "PATH=${soft-kernel_BINARY_DIR}:${soft-storage-mongo_BINARY_DIR}:${soft-storage-plugins-mongo_BINARY_DIR}:$ENV{PATH}")
+  endif()
+ 
 else(GTEST_FOUND)
   message("Google test not found - skipping tests")
 endif(GTEST_FOUND)
