--- a/tools/src/plugins/hsm/CMakeLists.txt
+++ b/tools/src/plugins/hsm/CMakeLists.txt
@@ -5,7 +5,7 @@ set (CMAKE_INCLUDE_CURRENT_DIR    ON)
 set (CMAKE_AUTOMOC                ON)
 
 include_directories (
-  "../plugins/common")
+  "../common")
 
 aux_source_directory (. SRC_LIST)
 set (LINK_LIBS ${LINK_LIBS}
