Updated C-API and improved loading of storage plugins

--- a/core/src/kernel/CMakeLists.txt
+++ b/core/src/kernel/CMakeLists.txt
@@ -36,3 +36,4 @@ set(${PROJECT_NAME}_LIBS
 install(TARGETS ${PROJECT_NAME} LIBRARY DESTINATION lib)
 install(DIRECTORY . DESTINATION include/soft5 FILES_MATCHING PATTERN "*.h")
 install(FILES Soft DESTINATION include/soft5)
+install(FILES ${CMAKE_CURRENT_BINARY_DIR}/config.h DESTINATION include/soft5)
