--- a/core/src/kernel/config.h.in
+++ b/core/src/kernel/config.h.in
@@ -3,7 +3,7 @@
 /* SOFT version number */
 #define SOFT_MAJOR_VERSION @SOFT_MAJOR_VERSION@
 #define SOFT_MINOR_VERSION @SOFT_MINOR_VERSION@
-#define SOFT_MICRO_VERSION @SOFT_MICRO_VERSION@
+#define SOFT_PATCH_VERSION @SOFT_PATCH_VERSION@
 
 
 /* SOFT base library, e.g. "/usr/local/lib/soft5" */
