--- a/core/src/kernel/CMakeLists.txt
+++ b/core/src/kernel/CMakeLists.txt
@@ -34,6 +34,8 @@ set(${PROJECT_NAME}_LIBS
   CACHE INTERNAL "${PROJECT_NAME}: Link Libs" FORCE)
 
 install(TARGETS ${PROJECT_NAME} LIBRARY DESTINATION lib)
-install(DIRECTORY . DESTINATION include/soft5 FILES_MATCHING PATTERN "*.h")
-install(FILES Soft DESTINATION include/soft5)
-install(FILES ${CMAKE_CURRENT_BINARY_DIR}/config.h DESTINATION include/soft5)
+install(DIRECTORY .
+  DESTINATION ${INCLUDE_INSTALL_DIR}
+  FILES_MATCHING PATTERN "*.h")
+install(FILES Soft DESTINATION ${INCLUDE_INSTALL_DIR})
+install(FILES ${CMAKE_CURRENT_BINARY_DIR}/config.h DESTINATION ${INCLUDE_INSTALL_DIR})
