--- a/foreign/c/src/softc/CMakeLists.txt
+++ b/foreign/c/src/softc/CMakeLists.txt
@@ -21,6 +21,12 @@ set(${PROJECT_NAME}_LIBS
   ${LINK_LIBS}
   CACHE INTERNAL "${PROJECT_NAME}: Link Libs" FORCE)
 
-install (TARGETS ${PROJECT_NAME} LIBRARY DESTINATION lib)
-install(DIRECTORY . DESTINATION include/soft5/softc FILES_MATCHING PATTERN "*.h")
+install (TARGETS ${PROJECT_NAME}
+  LIBRARY DESTINATION lib)
+
+install(DIRECTORY .
+  DESTINATION ${INCLUDE_INSTALL_DIR}/${PROJECT_NAME}
+  FILES_MATCHING PATTERN "*.h"
+  PATTERN "*-private.h" EXCLUDE
+  )
 
