--- a/storage/src/hdf5/CMakeLists.txt
+++ b/storage/src/hdf5/CMakeLists.txt
@@ -31,6 +31,11 @@ set(${PROJECT_NAME}_LIBS
   ${LINK_LIBS}
   CACHE INTERNAL "${PROJECT_NAME}: Link Libs" FORCE)
 
-install(TARGETS ${PROJECT_NAME} LIBRARY DESTINATION lib)
-install(DIRECTORY . DESTINATION include/soft5 FILES_MATCHING PATTERN "*.h")
-install(FILES QH5 DESTINATION include/soft5)
+#install(TARGETS ${PROJECT_NAME} LIBRARY DESTINATION lib)
+#install(DIRECTORY .
+#  DESTINATION ${INCLUDE_INSTALL_DIR}
+#  FILES_MATCHING PATTERN "*.h"
+#  PATTERN "qh5*.h" EXCLUDE
+#  )
+#
+#install(FILES QH5 DESTINATION include/soft5)
