--- a/storage/src/mongo/CMakeLists.txt
+++ b/storage/src/mongo/CMakeLists.txt
@@ -27,5 +27,10 @@ set(${PROJECT_NAME}_LIBS
   CACHE INTERNAL "${PROJECT_NAME}: Link Libs" FORCE)
 
 install(TARGETS ${PROJECT_NAME} LIBRARY DESTINATION lib)
-install(DIRECTORY . DESTINATION ${INCLUDE_INSTALL_DIR} FILES_MATCHING PATTERN "*.h")
-install(FILES QMongo DESTINATION ${INCLUDE_INSTALL_DIR})
+install(DIRECTORY .
+  DESTINATION ${INCLUDE_INSTALL_DIR}
+  FILES_MATCHING PATTERN "*.h"
+  PATTERN "qmongo*.h" EXCLUDE
+  PATTERN "qh5*.h" EXCLUDE
+  )
+#install(FILES QMongo DESTINATION ${INCLUDE_INSTALL_DIR})
