--- a/storage/src/mongo/CMakeLists.txt
+++ b/storage/src/mongo/CMakeLists.txt
@@ -30,7 +30,5 @@ install(TARGETS ${PROJECT_NAME} LIBRARY DESTINATION lib)
 install(DIRECTORY .
   DESTINATION ${INCLUDE_INSTALL_DIR}
   FILES_MATCHING PATTERN "*.h"
-  PATTERN "qmongo*.h" EXCLUDE
-  PATTERN "qh5*.h" EXCLUDE
   )
-#install(FILES QMongo DESTINATION ${INCLUDE_INSTALL_DIR})
+install(FILES QMongo DESTINATION ${INCLUDE_INSTALL_DIR})
