Updated softshell with network functionality. added mongoplugin test

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -87,9 +87,10 @@ endif (WITH_STORAGE_HD5)
 if (WITH_STORAGE_MONGO)
   add_subdirectory(storage/src/mongo)
   add_subdirectory(storage/src/plugins/mongo)
-  if (WITH_TESTS)	
-    #     add_subdirectory(storage/test/mongo)	!!!
-  endif (WITH_TESTS)
+  if (WITH_TESTS)
+    #add_subdirectory(storage/test/mongo)
+    add_subdirectory(storage/test/plugins/mongo)
+  endif(WITH_TESTS)
 endif (WITH_STORAGE_MONGO)
 
 if (WITH_STORAGE_JSON)
