Cleaned up Python bindings

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,6 +15,7 @@ option (WITH_FOREIGN_C "Compile with C API"               ON)
 option (WITH_FOREIGN_FORTRAN "Compile with Fortran API"   OFF)
 option (WITH_FOREIGN_PYTHON "Compile with Python API"     OFF)
 option (WITH_NUMERICS "Compile with SOFT Numerics"        ON)
+option (USE_PYTHON3 "Create Python 3 bindings instead of Python 2" ON)
 #option (WITH_FOREIGN_HASKELL "Compile with Haskell API" OFF)
 option (WITH_TESTS "Compile tests"                        ON)
 
@@ -141,6 +142,11 @@ if (WITH_FOREIGN_FORTRAN)
 endif (WITH_FOREIGN_FORTRAN)
 
 if (WITH_FOREIGN_PYTHON)
+  if (USE_PYTHON3)
+    set(Python_ADDITIONAL_VERSIONS 3.6 3.5 3.4 3.3 3.2)
+  else (USE_PYTHON3)
+    set(Python_ADDITIONAL_VERSIONS 2.7 2.6 2.5)
+  endif (USE_PYTHON3)
   add_subdirectory(foreign/python/src/softpy)
   if (WITH_TESTS)
     add_subdirectory(foreign/python/test/softpy)
