Updated writing functions

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -84,6 +84,7 @@ if (WITH_STORAGE_HD5)
   add_subdirectory(storage/src/plugins/hdf5)
   if (WITH_TESTS)
     add_subdirectory(storage/test/hdf5)
+    add_subdirectory(storage/test/plugins/hdf5)
   endif (WITH_TESTS)
 endif (WITH_STORAGE_HD5)
 
