--- a/storage/src/plugins/hdf5/CMakeLists.txt
+++ b/storage/src/plugins/hdf5/CMakeLists.txt
@@ -13,4 +13,10 @@ add_library (${PROJECT_NAME} SHARED ${SRC_LIST})
 target_compile_features(${PROJECT_NAME} PUBLIC cxx_constexpr)
 target_link_libraries(${PROJECT_NAME} ${LINK_LIBS})
 
+set(${PROJECT_NAME}_INCLUDE_DIRS
+  ${soft-storage-hdf5_INCLUDE_DIRS}
+  ${PROJECT_SOURCE_DIR}
+  CACHE INTERNAL "${PROJECT_NAME}: Include Directories" FORCE)
+
+
 install(TARGETS ${PROJECT_NAME} LIBRARY DESTINATION ${STORAGE_PLUGINS_INSTALL_DIR})
