--- a/foreign/python/test/softpy/CMakeLists.txt
+++ b/foreign/python/test/softpy/CMakeLists.txt
@@ -20,7 +20,7 @@ if(PYTHONINTERP_FOUND AND PYTHONLIBS_FOUND)
       ENVIRONMENT "LD_LIBRARY_PATH=${soft-storage-plugins-hdf5_BINARY_DIR}:${soft-kernel_BINARY_DIR}:${soft-storage-hdf5_BINARY_DIR}:${soft-storage-mongo_BINARY_DIR}:${soft-storage-plugins-json_BINARY_DIR}:${soft-storage-plugins-mongo_BINARY_DIR}:${softc_BINARY_DIR}:$ENV{LD_LIBRARY_PATH}")
   else()
     set_property(TEST ${PROJECT_NAME} PROPERTY
-      ENVIRONMENT "PATH=${soft-storage-plugins-json_BINARY_DIR}:${soft-storage-plugins-hdf5_BINARY_DIR}:${soft-kernel_BINARY_DIR}:${soft-storage-hdf5_BINARY_DIR}:${soft-storage-mongo_BINARY_DIR}:${soft-storage-plugins-json_BINARY_DIR}:${soft-storage-plugins-mongo_BINARY_DIR}:${softc_BINARY_DIR}:$ENV{PATH}")
+      ENVIRONMENT "PATH=${soft-storage-plugins-json_BINARY_DIR};${soft-storage-plugins-hdf5_BINARY_DIR};${soft-kernel_BINARY_DIR};${soft-storage-hdf5_BINARY_DIR};${soft-storage-mongo_BINARY_DIR};${soft-storage-plugins-json_BINARY_DIR};${soft-storage-plugins-mongo_BINARY_DIR};${softc_BINARY_DIR};$ENV{PATH}")
   endif()
   
   set_property(TEST ${PROJECT_NAME} APPEND PROPERTY
