Added forge, and updated softc interfaces Added initial external storage backend (no build)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -107,6 +107,8 @@ if (WITH_PLUGIN_MONGO)
   add_subdirectory(tools/src/plugins/mongo)
 endif (WITH_PLUGIN_MONGO)
 
+add_subdirectory(tools/src/forge)
+
 if (WITH_PLUGIN_GSL)
   add_subdirectory(tools/src/plugins/gsl)
 endif(WITH_PLUGIN_GSL)
