--- a/foreign/c/test/softc/CMakeLists.txt
+++ b/foreign/c/test/softc/CMakeLists.txt
@@ -13,12 +13,12 @@ if(GTEST_FOUND)
   add_test(${PROJECT_NAME}
     ${RUNNER} ${CMAKE_CURRENT_BINARY_DIR}/${PROJECT_NAME})
 
-  if (UNIX)
-    set_property(TEST ${PROJECT_NAME}
-      PROPERTY ENVIRONMENT "LD_LIBRARY_PATH=${softc_BINARY_DIR}:${soft-kernel_BINARY_DIR}:$ENV{LD_LIBRARY_PATH}")
+  if(UNIX)
+    set_property(TEST ${PROJECT_NAME} PROPERTY
+      ENVIRONMENT "LD_LIBRARY_PATH=${LD_LIBRARY_PATH}:$ENV{LD_LIBRARY_PATH}")
   else()
-    set_property(TEST ${PROJECT_NAME}
-      PROPERTY ENVIRONMENT "PATH=${softc_BINARY_DIR}:${soft-kernel_BINARY_DIR}:$ENV{PATH}")
+    set_property(TEST ${PROJECT_NAME} PROPERTY
+      ENVIRONMENT "PATH=${PATH}:$ENV{PATH}")
   endif()
  
 else(GTEST_FOUND)
