--- a/foreign/python/test/softpy/CMakeLists.txt
+++ b/foreign/python/test/softpy/CMakeLists.txt
@@ -14,20 +14,20 @@ if(PYTHONINTERP_FOUND AND PYTHONLIBS_FOUND)
     ${PYTHON_EXECUTABLE} ${CMAKE_CURRENT_SOURCE_DIR}/test_softpy.py)
     #"${soft-storage-plugins-mongo_BINARY_DIR}:${soft-storage-plugins-json_BINARY_DIR}")
 
-  
-  if (UNIX)
+  # Set environment
+  if(UNIX)
     set_property(TEST ${PROJECT_NAME} PROPERTY
-      ENVIRONMENT "LD_LIBRARY_PATH=${soft-storage-plugins-hdf5_BINARY_DIR}:${soft-kernel_BINARY_DIR}:${soft-storage-hdf5_BINARY_DIR}:${soft-storage-mongo_BINARY_DIR}:${soft-storage-plugins-json_BINARY_DIR}:${soft-storage-plugins-mongo_BINARY_DIR}:${softc_BINARY_DIR}:$ENV{LD_LIBRARY_PATH}")
+      ENVIRONMENT "LD_LIBRARY_PATH=${LD_LIBRARY_PATH}:$ENV{LD_LIBRARY_PATH}")
   else()
     set_property(TEST ${PROJECT_NAME} PROPERTY
-      ENVIRONMENT "PATH=${soft-storage-plugins-json_BINARY_DIR};${soft-storage-plugins-hdf5_BINARY_DIR};${soft-kernel_BINARY_DIR};${soft-storage-hdf5_BINARY_DIR};${soft-storage-mongo_BINARY_DIR};${soft-storage-plugins-json_BINARY_DIR};${soft-storage-plugins-mongo_BINARY_DIR};${softc_BINARY_DIR};$ENV{PATH}")
+      ENVIRONMENT "PATH=${PATH}:$ENV{PATH}")
   endif()
-  
-  set_property(TEST ${PROJECT_NAME} APPEND PROPERTY
-    ENVIRONMENT "PYTHONPATH=${softpy_BINARY_DIR}:$ENV{PYTHONPATH}")
 
   set_property(TEST ${PROJECT_NAME} APPEND PROPERTY
-    ENVIRONMENT "SOFTSTORAGE=${soft-storage-plugins-json_BINARY_DIR}:${soft-storage-plugins-hdf5_BINARY_DIR}:$ENV{SOFTSTORAGE}")
+    ENVIRONMENT "SOFTSTORAGE=${SOFTSTORAGE}:$ENV{SOFTSTORAGE}")
+
+  set_property(TEST ${PROJECT_NAME} APPEND PROPERTY
+    ENVIRONMENT "PYTHONPATH=${softpy_BINARY_DIR}:$ENV{PYTHONPATH}")
 
 else()
   message("Python not found - skipping tests")
