--- a/storage/test/plugins/hdf5/CMakeLists.txt
+++ b/storage/test/plugins/hdf5/CMakeLists.txt
@@ -14,13 +14,16 @@ if(GTEST_FOUND)
   add_test(${PROJECT_NAME}
     ${RUNNER} ${CMAKE_CURRENT_BINARY_DIR}/${PROJECT_NAME} "${soft-storage-plugins-hdf5_BINARY_DIR}")
 
-  if (UNIX)
-    set_property(TEST ${PROJECT_NAME}
-      PROPERTY ENVIRONMENT "LD_LIBRARY_PATH=${soft-kernel_BINARY_DIR}:${soft-storage-hdf5_BINARY_DIR}:${soft-storage-plugins-hdf5_BINARY_DIR}:$ENV{LD_LIBRARY_PATH}")
+  if(UNIX)
+    set_property(TEST ${PROJECT_NAME} PROPERTY
+      ENVIRONMENT "LD_LIBRARY_PATH=${LD_LIBRARY_PATH}:$ENV{LD_LIBRARY_PATH}")
   else()
-    set_property(TEST ${PROJECT_NAME}
-      PROPERTY ENVIRONMENT "PATH=${soft-kernel_BINARY_DIR}:${soft-storage-hdf5_BINARY_DIR}:${soft-storage-plugins-hdf5_BINARY_DIR}:$ENV{PATH}")
+    set_property(TEST ${PROJECT_NAME} PROPERTY
+      ENVIRONMENT "PATH=${PATH}:$ENV{PATH}")
   endif()
+
+  set_property(TEST ${PROJECT_NAME} APPEND PROPERTY
+    ENVIRONMENT "SOFTSTORAGE=${SOFTSTORAGE}:$ENV{SOFTSTORAGE}")
  
 else(GTEST_FOUND)
   message("Google test not found - skipping tests")
